Fix whitespace error with styles.css (DejaVu Sans)

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd {
     background-color: #ff8888;
-    font-family: Verdana, DejaVu Sans, sans-serif;
+    font-family: Verdana, 'DejaVu Sans', sans-serif;
 }
 
 .sz24 {
